Used all resources in english

--- a/src/user/alert/history.html
+++ b/src/user/alert/history.html
@@ -5,7 +5,7 @@
         <div class="fourteen wide column">
             <div class="ui stackable center aligned vertically padded grid">
                 <div class="twelve wide column">
-                    <h3 class="ui header">Price history</h3>
+                    <h3 class="ui header" i18n="alert.history.title">Price history</h3>
                     <price-graph data.one-way="alertHistory"></price-graph>
                 </div>
             </div>
