--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -14,8 +14,8 @@
             <table class="ui very basic padded table" style="width: 60%; margin: 0 auto;">
                 <thead>
                     <tr>
-                        <th>Source</th>
-                        <th>Price</th>
+                        <th i18n="alert.sources.source">Source</th>
+                        <th i18n="alert.sources.price">Price</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -49,11 +49,11 @@
                     <tr>
                         <th colspan="3">
                             <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
+                                i18n="[append]alert.sources.addOtherSource"
                                 data-analytics-category="sources"
                                 data-analytics-action="add"
                                 data-analytics-label="list button">
                                 <i class="icon plus"></i>
-                                Add another source for this product
                             </div>
                         </th>
                     </tr>
@@ -62,18 +62,18 @@
             <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
                 <div class="ui text menu">
                     <div class="item">
-                        <div>Best deal updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
+                        <div i18n="[prepend]alert.bestDealUpdatedTime">${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
                     </div>
                 </div>
             </div>
 
             <div class="ui relaxed section" style="width: 80%; margin: 0 auto;">
                 <div class="ui ${isSearchingProducts ? 'active': ''} inverted dimmer">
-                    <div class="ui text loader">Searching for similar products...</div>
+                    <div class="ui text loader" i18n="alert.sources.searchingSimilar">Searching for similar products...</div>
                 </div>
 
                 <div show.bind="suggestedProducts.length">
-                    <h4>You might also want to add these sources to your alert</h4>
+                    <h4 i18n="alert.sources.addOtherSourceSuggestion">You might also want to add these sources to your alert</h4>
 
                     <div class="ui link cards">
                         <div class="card" repeat.for="product of suggestedProducts | sort:'price'" style="border-radius: 2px">
@@ -87,7 +87,7 @@
                                     data-analytics-action="click"
                                     data-analytics-label.bind="product.originalUrl">${product.title}</a>
                                 <div class="meta">
-                                    <small>Last updated ${product.lastUpdate | timeAgo}</small>
+                                    <small i18n="[prepend]alert.lastUpdatedTime">${product.lastUpdate | timeAgo}</small>
                                 </div>
                             </div>
                             <a class="image" href.bind="product.productUrl" target="_blank"
@@ -101,7 +101,8 @@
                                     data-analytics-category="Outbound Link"
                                     data-analytics-action="click"
                                     data-analytics-label.bind="product.originalUrl">
-                                    ${product.price | price} at
+                                    ${product.price | price}
+                                    <span i18n="alert.priceAt"></span>
                                     <img class="ui avatar image" src="/images/${product.source.domain}-small.png">
                                     ${product.source.name}
                                 </a>
@@ -114,10 +115,10 @@
     </div>
 
     <div class="ui ${isUpdatingAlert ? 'active': ''} inverted dimmer">
-        <div class="ui text loader">Updating</div>
+        <div class="ui text loader" i18n="alert.updating">Updating</div>
     </div>
 
     <add-source class-name="${isAddingSource ? 'loading' : ''}" close.call="removeModal()" add.call="addEntry(newAlertUrl)"></add-source>
 
-    <confirmation-modal header="Delete alert" message="Are you sure you want to delete the selected entry in this alert?"></confirmation-modal>
+    <confirmation-modal message="alert.sources.deleteConfirmation"></confirmation-modal>
 </template>
