--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -5,7 +5,7 @@
         <div class="ui container" style="position: relative;">
             <div class="ui text menu" style="margin: 0; padding: 3em 0;">
                 <div class="item">
-                    <h1 class="ui header" style="color: white; font-size: 3rem; font-weight: 200;">Watched products</h1>
+                    <h1 class="ui header" style="color: white; font-size: 3rem; font-weight: 200;" i18n="alerts.watchedProducts">Watched products</h1>
                 </div>
         
                 <!--<div class="right item" show.bind="alerts.length">
@@ -35,8 +35,8 @@
                             data-analytics-action="remove"></i>
                         <a class="header" route-href="route: alert; params.bind: { alertId: alert.id }">${alert.title}</a>
                         <div class="meta">
-                            <small show.bind="alert.isActive">Best deal updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</small>
-                            <small hide.bind="alert.isActive">Deactivated</small>
+                            <small show.bind="alert.isActive" i18n="[prepend]alert.bestDealUpdatedTime">${alert.bestCurrentDeal.modifiedAt | timeAgo}</small>
+                            <small hide.bind="alert.isActive" i18n="alert.deactivated">Deactivated</small>
                         </div>
                     </div>
                     <a route-href="route: alert; params.bind: { alertId: alert.id }" class="image">
@@ -47,15 +47,16 @@
                             data-analytics-category="Outbound Link"
                             data-analytics-action="click"
                             data-analytics-label.bind="alert.bestCurrentDeal.originalUrl">
-                            ${alert.bestCurrentDeal.price | price} at
+                            ${alert.bestCurrentDeal.price | price}
+                            <span i18n="alert.priceAt"></span>
                             <img class="ui avatar image" src="/images/${alert.bestCurrentDeal.source.domain}-small.png">
                             ${alert.bestCurrentDeal.source.name}
                         </a>
                         <a class="right floated primary-action-hover" click.delegate="activateAlert(alert)" hide.bind="alert.isActive"
+                            i18n="[append]alert.activate"
                             data-analytics-category="alerts"
                             data-analytics-action="activate">
                             <i class="toggle on icon"></i>
-                            Activate
                         </a>
                     </div>
                 </div>
@@ -64,24 +65,24 @@
         
         <div class="ui overlay" hide.bind="alerts.length">
             <div style="width: 100%; position: absolute; top: 50%; left: 0;">
-                <p style="text-align: center;">You are not watching any product right now.</p>
-                <p style="text-align: center;">Get started!</p>
+                <p style="text-align: center;" i18n="alerts.noAlert">You are not watching any product right now.</p>
+                <p style="text-align: center;" i18n="alerts.getStarted">Get started!</p>
                 <div style="text-align: center;">
                     <div class="ui primary primary-action button" click.delegate="addAlert()"
+                        i18n="[append]alerts.createAlert"
                         data-analytics-category="alerts"
                         data-analytics-action="add">
                         <i class="plus icon"></i>
-                        Create a product alert
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="ui ${isUpdatingAlert ? 'active': ''} inverted dimmer">
-            <div class="ui text loader">Updating</div>
+            <div class="ui text loader" i18n="alerts.updating">Updating</div>
         </div>
 
-        <confirmation-modal header="Delete alert" message="Are you sure you want to delete this product alert?"></confirmation-modal>
+        <confirmation-modal message="alerts.deleteConfirmation"></confirmation-modal>
 
         <add-source class="add-source-modal" class-name="${isCreatingAlert ? 'loading' : ''}" close.call="removeModal()" add.call="create(newAlertUrl)"></add-source>
     </div>
