--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -33,7 +33,7 @@
                         </td>
                         <td>
                             <h4>
-                                <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | price}</a>
+                                <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | nf: { style: 'currency', currency: 'CAD'}}</a>
                             </h4>
                         </td>
                         <td class="collapsing">
@@ -101,7 +101,7 @@
                                     data-analytics-category="Outbound Link"
                                     data-analytics-action="click"
                                     data-analytics-label.bind="product.originalUrl">
-                                    ${product.price | price}
+                                    ${product.price | nf: { style: 'currency', currency: 'CAD'}}
                                     <span i18n="alert.priceAt"></span>
                                     <img class="ui avatar image" src="/images/${product.source.domain}-small.png">
                                     ${product.source.name}
