PriceWise en français, putain! Vive la France!

--- a/src/user/nav-bar.html
+++ b/src/user/nav-bar.html
@@ -8,6 +8,9 @@
                 </a>
                 
                 <div class="right icon menu">
+                    <a class="item" click.delegate="changeLanguage()">
+                        <span class="ui basic inverted icon button" i18n="otherLanguage">Language</span>
+                    </a>
                     <a class="item" route-href="route: settings">
                         <i class="large settings icon"></i>
                     </a>
