Style adjustments for mobile version

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -58,7 +58,7 @@
                     <h3 class="ui header">${'welcome.features.sources' & t: { context: 'description' }}</h3>
                 </div>
             </div>
-            <div class="ui four column center aligned divided relaxed stackable grid container">
+            <div class="ui four column center aligned divided relaxed doubling grid container">
                 <div class="row">
                     <div repeat.for="source of sources" class="column">
                         <h2 class="ui icon header">
