Fixed typos and texts

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -41,10 +41,10 @@
                         <p>${'welcome.features.monitor' & t: { context: 'description' }}</p>
 
                         <h3 class="ui header">${'welcome.features.notifications' & t: { context: 'title' }}</h3>
-                        <p>${'welcome.features.monitor' & t: { context: 'description' }}</p>
+                        <p>${'welcome.features.notifications' & t: { context: 'description' }}</p>
 
                         <h3 class="ui header">${'welcome.features.history' & t: { context: 'title' }}</h3>
-                        <p>${'welcome.features.monitor' & t: { context: 'description' }}</p>
+                        <p>${'welcome.features.history' & t: { context: 'description' }}</p>
                     </div>
                     <div class="six wide right floated column">
                         <img src="/images/screen-graph.png" class="ui large bordered rounded image">
