Put the chrome app url in the config

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -13,7 +13,7 @@
                         <a href="fb://page/1745012672451697" class="ui facebook icon button mobile only">
                             <i class="facebook icon"></i>
                         </a>
-                        <a href="https://chrome.google.com/webstore/detail/pricewise-chrome/dnkalnjnohfonmebilnjjgeefldmkfmm" target="_blank" class="ui basic inverted icon button mobile hidden"
+                        <a href.one-time="chromeAppUrl" target="_blank" class="ui basic inverted icon button mobile hidden"
                             data-analytics-category="Chrome Store"
                             data-analytics-action="click"
                             data-analytics-label="nav-button"><i class="chrome icon"></i></a>
@@ -60,7 +60,7 @@
                         <h1 class="ui header" i18n="welcome.chrome.extensionAvailable">PriceWise has a Chrome extension!</h1>
                     </div>
                     <div class="fourteen wide column">
-                        <a href="https://chrome.google.com/webstore/detail/pricewise-chrome/dnkalnjnohfonmebilnjjgeefldmkfmm" target="_blank" class="ui centered medium image"
+                        <a href.one-time="chromeAppUrl" target="_blank" class="ui centered medium image"
                             data-analytics-category="Chrome Store"
                             data-analytics-action="click"
                             data-analytics-label="badge">
@@ -72,7 +72,7 @@
                     <div class="eight wide column">
                         <h3 class="ui header" i18n="welcome.chrome.easily">Get wise more easily!</h3>
                         <p i18n="welcome.chrome.description">Create alerts for your products directly from your product page on our supported websites!</p>
-                        <a class="ui large right google plus button" href="https://chrome.google.com/webstore/detail/pricewise-chrome/dnkalnjnohfonmebilnjjgeefldmkfmm" target="_blank" i18n="[append]welcome.chrome.getApp"
+                        <a class="ui large right google plus button" href.one-time="chromeAppUrl" target="_blank" i18n="[append]welcome.chrome.getApp"
                             data-analytics-category="Chrome Store"
                             data-analytics-action="click"
                             data-analytics-label="button">
