--- a/src/callback/index.html
+++ b/src/callback/index.html
@@ -8,7 +8,7 @@
             border-color: #02776f transparent transparent;
         }
       </style>
-      <div class="ui huge indeterminate text loader">
+      <div class="ui huge indeterminate text loader" i18n="welcome.authenticating">
           Authenticating
         </div>
     </div>
