--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -125,6 +125,6 @@
             </div>
         </div>
 
-        <footer containerless></footer>
+        <footer></footer>
     </div>
 </template>
