Added list feature on the homepage

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -45,6 +45,9 @@
                         <h3 class="ui header">${'welcome.features.notifications' & t: { context: 'title' }}</h3>
                         <p>${'welcome.features.notifications' & t: { context: 'description' }}</p>
 
+                        <h3 class="ui header">${'welcome.features.lists' & t: { context: 'title' }}</h3>
+                        <p>${'welcome.features.lists' & t: { context: 'description' }}</p>
+
                         <h3 class="ui header">${'welcome.features.history' & t: { context: 'title' }}</h3>
                         <p>${'welcome.features.history' & t: { context: 'description' }}</p>
                     </div>
