--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -16,6 +16,12 @@
                         <a href="https://www.facebook.com/PriceWiseCA/" target="_blank" class="ui facebook button mobile hidden">
                             <i class="facebook icon"></i>Facebook
                         </a>
+                        <a href="http://blog.pricewi.se/" target="_blank" class="ui wordpress button"
+                            data-analytics-category="Blog"
+                            data-analytics-action="click"
+                            data-analytics-label="nav-button">
+                            <i class="wordpress icon"></i>Blog
+                        </a>
                         <a href="fb://page/1745012672451697" class="ui facebook icon button mobile only">
                             <i class="facebook icon"></i>
                         </a>
@@ -53,6 +59,28 @@
                     </div>
                     <div class="six wide right floated column">
                         <img src="/images/screen-graph.png" class="ui large bordered rounded image">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="ui vertical stripe mobile hidden segment alternate">
+            <div class="ui container">
+                <div class="ui stackable center aligned grid">
+                    <div class="fourteen wide column">
+                        <h1 class="ui header" i18n="welcome.blog.available">PriceWise has a blog!</h1>
+                    </div>
+                </div>
+                <div class="ui stackable center aligned grid">
+                    <div class="eight wide column">
+                        <h3 class="ui header" i18n="welcome.blog.join">Join in on the discussion!</h3>
+                        <p i18n="welcome.blog.description">We will talk about shopping strategies, app features, and the technology behind PriceWise</p>
+                        <a href="http://blog.pricewi.se/" target="_blank" class="ui large right wordpress button"
+                            data-analytics-category="Blog"
+                            data-analytics-action="click"
+                            data-analytics-label="button">
+                            <i class="wordpress icon"></i>Blog
+                        </a>
                     </div>
                 </div>
             </div>
